two-java-applications/kustomize/app02/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app02-service
spec:
  selector:
    app: app02
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
